# br-wrapper

./: CMakeLists.txt  Config.in  README.md  external.desc  external.mk  setup-qt-apps.sh
board/aws-iot-demo/: README.md
board/beaglebone-preemptrt-demo/: README.md  linux.config
board/brbox_x64/: linux.config
board/ebaz4205/: gen-sw-update-image.sh  genimage.cfg  post-build.sh  post-image.sh  readme.txt  sw-description  uEnv.txt
board/pi3-touch-demo/: linux.config
board/pi4-touch-demo/: linux.config
board/pi5-touch-demo/: linux.config
board/stm32mp157a_dk1/: stm32mp157a_dk1_defconfig
board/stm32mp157a_dk1rt/: linux.config
board/zed/: gen-sw-update-image.sh  genimage.cfg  post-build.sh  post-image.sh  readme.txt  sw-description  swupdate.config  uEnv.txt
configs/: beaglebone_preemptrt_defconfig  brbox_x64_efi_defconfig  olimex_a20_olinuxino_som204_defconfig  raspberrypi3_touch_demo_defconfig  raspberrypi4_aws_iot_defconfig  raspberrypi4_touch_demo_defconfig  raspberrypi5_touch_demo_defconfig  stm32mp157a_dk1_brbox_defconfig  stm32mp157a_dk1rt_defconfig  zynq_ebaz4205_defconfig  zynq_zed_defconfig  zynqmp_zcu106_defconfig
docs/: BUILD.md
package/: Config.in  README.md
package/als-dimmer/: Config.in  als-dimmer.mk
package/aws-iot-device-sdk-cpp-v2/: Config.in  aws-iot-device-sdk-cpp-v2.mk
package/aws-iot-pubsub-agent/: Config.in  aws-iot-pubsub-agent.mk
package/brbox_genintrdrv/: brbox_genintrdrv.mk
package/car-can-emulator/: Config.in  car-can-emulator.mk
package/disp-can-ctrl/: Config.in  README.md  disp-can-ctrl.mk
package/disp-can-ctrl/src/: CMakeLists.txt  S99DispCanCtrl  config.h  disp-can-client.cpp  disp-can-ctrl.cpp  readme.txt
package/disp-settings/: CMakeLists.txt  Config.in  disp-settings.mk
package/disp-settings/src/: AlsDimmerController.cpp  AlsDimmerController.h  DualDisplayAbsoluteController.cpp  DualDisplayAbsoluteController.h  FpgaController.cpp  FpgaController.h  McuController.cpp  McuController.h  PmicController.cpp  PmicController.h  TddiController.cpp  TddiController.h  TemperatureController.cpp  TemperatureController.h  config.h  disp-settings-dual-display-restore.py  disp-settings-dual-display-restore.service.in  disp-settings.json  disp-settings.pro  main.cpp  main.qml
package/disp-tester/: CMakeLists.txt  Config.in  README.md  WHITEBOX-USAGE.md  disp-tester.mk  readme.txt
package/disp-tester/src/: FpgaController.cpp  PatternController.cpp  PatternController.h  PatternParameters.h  als-dimmer-sweep-child.py  d65-calibration-child.py  disp-tester.pro  live-measurements-child.py  main.cpp  main.qml  new-white-point-match-child.py  new-white-point-profile-child.py  qml.qrc  stress-disp-tester.sh  white-point-match-child.py  white-point-profile-child.py
package/disp-tester/src/patterns/: AnsiChecker.qml  BloomingDetection.qml  CrossDimming.qml  GrayscaleRamp.qml  MovingBall.qml  PatternBase.qml  SmpteBars.qml  Starfield.qml  WhiteBox.qml  WhiteBoxMM.qml  WhiteTextBlack.qml  ZoneBoundaryGrid.qml
package/hh983-serializer/: Config.in  hh983-serializer.mk
package/hh983-serializer/src/: CMakeLists.txt  Makefile  hh983-serializer-overlay.dts  hh983-serializer.c  init-hh983-988-fpdlink.sh  init-hh983-fpdlink.sh
package/hh983-serializer/src/scripts/: 984-LINK-STATUS-CHECK-TODO.md  debug-983-988-video-timing.sh  fpdlink-tool.sh  re-init-983-pipeline.sh  toggle-pi-hdmi.sh
package/himax-touch/: Config.in  himax-touch.mk
package/libddcutil/: Config.in  libddcutil.mk
package/micropanel/: Config.in  micropanel.mk
package/photoqt/: Config.in  photoqt.hash  photoqt.mk
package/preemptrt-gpiotest/: Config.in  preemptrt-gpiotest.mk
package/qt-cluster-demo/src/: CMakeLists.txt  CanReader.cpp  CanReader.h  ClusterModel.cpp  ClusterModel.h  DemoSimulator.cpp  DemoSimulator.h  FpgaController.h  cluster-launcher.sh  main.cpp  qml.qrc
package/qt-cluster-demo/src/qml/: ExitButton.qml  FuelGauge.qml  InfoBar.qml  NeedleGauge.qml  Speedometer.qml  Tachometer.qml  TelltaleRow.qml  TempGauge.qml  main.qml
package/qt-demo-launcher/: 99-input-permissions.rules  CMakeLists.txt  Config.in  README.md  qt-demo-launcher.mk  readme.txt  update-config-paths.sh  update-service-paths.sh
package/qt-demo-launcher/src/: Makefile  NetworkInterface.cpp  NetworkInterface.h  S99qt-launcher  config.h  display-analysis-report.sh  display-analysis-start-child.sh  kodi-launcher.sh  kodi-slideshow.sh  kodi-usb-common.sh  kodi-video.sh  main.cpp  qt-demo-launcher-pios.json  qt-demo-launcher.json  qt-demo-launcher.pro  qt-demo-launcher.service
package/qt-mpv-wrapper/: CMakeLists.txt  Config.in  README.md  qt-mpv-wrapper.mk
package/qt-mpv-wrapper/doc/: ARCHITECTURE.md  BUILD.md  COMPONENTS.md  NETWORK-API.md  PATH-CONFIGURATION.md  TESTING.md
package/qt-mpv-wrapper/src/: NetworkInterface.cpp  NetworkInterface.h  VideoController.cpp  VideoController.h  VideoPlayer.cpp  VideoPlayer.h  config.h  input-monitor.c  main.cpp  main.qml  mpv-input.conf  qt-mpv-wrapper.pro  qt-mpv-wrapper.sh
package/touch-gallery/: CMakeLists.txt  Config.in  SOCKET-API.md  touch-gallery.mk
package/touch-gallery/src/: GalleryController.cpp  GalleryController.h  Makefile  NetworkInterface.cpp  copy-image-to-usb.sh  main.cpp  main.qml  touch-gallery.pro
package/touch-tester/: 99-gpio-input.rules  BUILD_STATUS.md  CMakeLists.txt  Config.in  DESIGN_SUMMARY.md  QUICK_START.md  README.md  touch-tester.mk
package/touch-tester/dso-scripts/: CMakeLists.txt  RIGOL_TOOL_USAGE.md  automated-latency-test.sh  readme.txt  rigol-scpi.sh  rigol-tool.sh  rigol_scpi.sh  rigol_setup.sh
package/touch-tester/dso-scripts/dso-configs/: README.md
package/touch-tester/dso-scripts/dso-configs/touch-tester/: touch-test-setup-3ch.json  touch-test-setup.json
package/touch-tester/src/: CMakeLists.txt
package/touch-tester/src/lib-touch-test/: CMakeLists.txt  gpio_controller.cpp  gpio_controller.h  latency_measurer.cpp  latency_measurer.h  statistics.cpp  statistics.h  touch_reader.cpp  touch_reader.h
package/touch-tester/src/touch-tester-cli/: CMakeLists.txt  main.cpp
(+116 files in other folders)
